--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
   </head>
   <body>
     <!-- top banner -->
-    <div>top banner</div>
+    <div class="top-banner">
+      <div class="container">
+        <div class="banner-text">
+          New to Usabilityhub
+        </div>
+      </div>
+    </div>
 
     <nav>
+      <div class="container">
+        <div class="nav-left">
+          <img src="assets/asset 1.png" alt="company log"
+        </div>
+      </div>
       <h1>Navigation Bar</h1>
     </nav>
     <header>
@@ -44,5 +55,6 @@
     <div>
       <h1>Sub Footer Section</h1>
     </div>
+    <script src="https://kit.fontawesome.com/c791c3ced0.js" crossorigin="anonymous"></script>
   </body>
 </html>
