--- a/index.html
+++ b/index.html
@@ -11,15 +11,26 @@
     <div class="top-banner">
       <div class="container">
         <div class="banner-text">
-          New to Usabilityhub
+          🥳 New to UsabilityHub: Open and closed card sorting!
         </div>
       </div>
     </div>
 
     <nav>
-      <div class="container">
-        <div class="nav-left">
-          <img src="assets/asset 1.png" alt="company log"
+      <div class="container flex main-nav">
+        <a href="#" class="logo">
+          <img src="assets/asset 1.png" alt="company logo" />
+      </a>
+      <div class="hover-links">
+        <ul class="flex">
+          <li><a href="#" class="hover-link">product</a></li>
+          <li><a href="#" class="hover-link">customer</a></li>
+          <li><a href="#" class="hover-link">pricing</a></li>
+          <li><a href="#" class="hover-link">resources</a></li>
+          <li><a href="#" class="hover-link">sign in</a></li>
+          <li><a href="#" class="hover-link">sign up</a></li>
+        </ul>
+      </div>
         </div>
       </div>
       <h1>Navigation Bar</h1>
